--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   list-style: none;
   text-decoration: none;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 body {
   background: #ecf7ea !important;
+}
+
+/* Navbar */
+header {
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  margin: auto;
+  width: 100%;
 }
 
 nav {
@@ -41,7 +51,6 @@ nav ul li a {
   text-transform: uppercase;
   padding: 5px 0;
   text-decoration: none !important;
-
 }
 
 nav ul li a::before {
@@ -61,7 +70,7 @@ nav ul li a:hover:before {
   transform: scaleX(1);
   transform-origin: left;
 }
-nav ul li a:hover{
+nav ul li a:hover {
   color: #098f2e;
 }
 
@@ -79,10 +88,8 @@ label #cancel {
 #check {
   display: none;
 }
-/* ------------------------- */
 
-
-
+/*--Home-- */
 .home {
   display: flex;
   color: #098f2e;
@@ -96,15 +103,35 @@ label #cancel {
 }
 
 .text img {
-
   margin-left: -15px;
 }
 
 .bg_image1 img {
-  float: right;
-  /* width: 100%; */
+  /* float: right; */
 }
 
+/*--video--*/
+.video {
+  background-image: url("./img/video_bg.png");
+  background-repeat: no-repeat;
+  /* display: cover; */
+  background-size: cover !important;
+  /* width: 100%; */
+  /* background-size: cover; */
+  text-align: center;
+  padding: 4%;
+}
+
+video {
+  width: 100vh !important;
+  height: 50vh !important;
+  object-fit: cover;
+  border-radius: 10px;
+  filter: opacity(75%);
+  z-index: 0;
+}
+
+/*--vision--*/
 .vision {
   display: flex;
   color: #098f2e;
@@ -123,31 +150,15 @@ label #cancel {
   width: 100%;
 }
 
+/*--Headings--*/
 .heading {
   font-size: 64px;
   color: #098f2e;
   text-transform: uppercase;
   font-weight: 600;
-
 }
 
-.video {
-  background-image: url("./img/video_bg.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  text-align: center;
-  padding: 4%;
-}
-
-video {
-  width: 980px;
-  height: 550px;
-  object-fit: cover;
-  border-radius: 10px;
-  filter: opacity(75%);
-  z-index: 0;
-}
-
+/* services */
 .services {
   margin-top: 3%;
   text-align: center;
@@ -195,6 +206,7 @@ video {
   font-size: 24px;
 }
 
+/* team */
 .team {
   text-align: center;
 }
@@ -216,146 +228,33 @@ video {
   background-position: bottom;
 }
 
-/* @media (min-width: 944px) {
-  nav img {
-    left: 8%;
-  }
-} */
-
-@media (max-width: 944px) {
-  nav img {
-    left: 6%;
-    top: 20px;
-    width: 130px;
-  }
-  nav ul li a {
-    font-size: 17px;
-  }
-  .video {
-    display: inline-block;
-  }
-
-  .video video {
-    width: 100%;
-    height: auto;
-  }
-}
-
-@media (max-width: 860px) {
-  label #btn {
-    display: block ;
-    /* float: right !important; */
-  }
-  ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #098f2e;
-    top: 80px;
-    left: -100%;
-    transition: all 0.5s;
-    text-align: center;
-  }
-  nav ul li {
-    display: block;
-    margin: 50px 0;
-    line-height: 30px;
-  }
-  nav ul li a {
-    font-size: 20px;
-    color: #ecf7ea;
-  }
-  nav ul li a::before {
-    background: #ecf7ea;
-  }
-  #check:checked ~ ul {
-    left: 0%;
-  }
-  #check:checked ~ label #btn {
-    display: none;
-  }
-  #check:checked ~ label #cancel {
-    display: block;
-  }
-
-  .home,
-  .vision {
-    display: inline;
-    font-size: 17px;
-  }
-
-  .heading {
-    font-size: 45px;
-  }
-
-  .text img {
-    margin-top: 20%;
-    width: 50%;
-    
-    height: auto;
-    margin-left: -10px;
-  }
-  .text{
-    text-align: center;
-  }
-
-  
-
-  .bg_image1 img,
-  .bg_image2 img {
-    width: 100%;
-    height: auto;
-  }
-  .video {
-    display: inline-flex;
-  }
-
-  .video video {
-    width: 100%;
-    height: auto;
-  }
-
-  /* .bg {
-    background-size: 100% 85%;
-  } */
-}
-
 .sticky {
   position: fixed;
   top: 0;
   width: 100%;
 }
 
-header {
-  position: relative;
-  top: 0;
-  left: 0;
-  z-index: 99;
-  margin: auto;
-  width: 100%;
-}
-
-#product{
+/* --Product-- */
+#product {
   background: url(img/products.png);
   background-size: cover;
-    /* background-position: right; */
-    display: flex;
-    /* justify-content: space-between; */
-    /* align-items: center; */
-    min-height: 100vh;
-    
+  /* background-position: right; */
+  display: flex;
+  /* justify-content: space-between; */
+  /* align-items: center; */
+  min-height: 100vh;
 }
-.product{
+.product {
   width: 100%;
   /* height: 30vh; */
   /* display: flex; */
-  
+
   justify-content: center;
   align-items: center;
   color: white !important;
   font-weight: 600;
 }
-.product .heading{
+.product .heading {
   margin-top: 3%;
   text-align: center;
   font-size: 64px;
@@ -363,23 +262,20 @@ header {
   color: white;
 }
 
-
-.carousel-item{
+.carousel-item {
   background-color: rgba(49, 71, 46, 0.58);
   height: 70vh;
   border-radius: 20px;
   text-align: center;
-
 }
 
-.carousel{
-
+.carousel {
   margin-left: 15%;
-border-radius: 20px;
+  border-radius: 20px;
   margin-right: 15%;
 }
 
-.heading2{
+.heading2 {
   /* margin-top: 3%; */
   padding-top: 3%;
   font-size: 7vh !important;
@@ -388,7 +284,6 @@ border-radius: 20px;
 .column {
   float: left;
   width: 50%;
-  
 }
 .column p {
   padding: 10% 5% 5% 25%;
@@ -400,277 +295,23 @@ border-radius: 20px;
   display: table;
   clear: both;
 }
-.column img{
-height: 33vh !important;
-padding-right: 10% ;
-padding-left: 10%;
-padding-top: 8%;
+.column img {
+  height: 33vh !important;
+  padding-right: 10%;
+  padding-left: 10%;
+  padding-top: 8%;
 }
 
-.more button{
-  padding: 8px;
+.more button {
+  padding: 13px;
   border: none;
   text-transform: uppercase;
-  font-size: 10px !important;
+  font-size: 15px !important;
+  font-weight: 600;
   border-radius: 5px;
-  background-color: #C2EAB4;
-  color: #295A48;
+  background-color: #c2eab4;
+  color: #295a48;
 }
-
-
-@media (max-width: 860px) {
-  
-}
-
-
-
-.contact .heading{
-  text-align: center;
-  color: white;
-
-}
-.contact{
-  padding-bottom: 20px;
-}
-
-
-
-
-
-
-input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid ~ label {
-  font-size: 0.55em;
-  color: #098f2e;
-  top: -5px;
-  -webkit-transition: all 0.225s ease;
-  transition: all 0.225s ease;
-}
-
-.styled-input {
-  float: left;
-  width: 293px;
-  margin: 1rem 0;
-  position: relative;
-  border-radius: 4px;
-}
-
-@media only screen and (max-width: 768px){
-  .styled-input {
-      width:100%;
-  }
-}
-
-
-
-.styled-input label {
-  color: #098f2e;
-  padding: 0.5rem 30px 0.5rem 30px;
-  position: absolute;
-  top: 10px;
-  left: 0;
-  -webkit-transition: all 0.25s ease;
-  transition: all 0.25s ease;
-  pointer-events: none;
-}
-
-.styled-input.wide { 
-  width: 650px;
-  max-width: 100%;
-}
-
-input,
-textarea {
-  padding: 20px;
-  border: 0;
-  width: 100%;
-  font-size: 1rem;
-  background-color: white;
-  color: #098f2e;
-  border-radius: 4px;
-}
-
-input:focus,
-textarea:focus { outline: 0; }
-
-input:focus ~ span,
-textarea:focus ~ span {
-  width: 100%;
-  -webkit-transition: all 0.075s ease;
-  transition: all 0.075s ease;
-}
-
-textarea {
-  width: 100%;
-  min-height: 15em;
-}
-
-.input-container {
-  width: 650px;
-  max-width: 100%;
-  margin: 20px auto 25px auto;
-}
-
-.submit-btn {
-  /* float: right; */
-  /* align-self: center; */
-  padding: 7px 35px;
-  border-radius: 5px;
-  display: inline-block;
-  background-color: #C2EAB4;
-  color: #098f2e;
-  text-transform: uppercase;
-  font-size: 13px;
-  cursor: pointer;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.06),
-            0 2px 10px 0 rgba(0,0,0,0.07);
-  -webkit-transition: all 300ms ease;
-  transition: all 300ms ease;
-}
-
-.submit-btn:hover {
-  transform: translateY(1px);
-  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.10),
-            0 1px 1px 0 rgba(0,0,0,0.09);
-}
-
-@media (max-width: 768px) {
-  .submit-btn {
-      width:auto;
-      /* margin-right: 10% ; */
-      margin-left: 10%;
-      /* float: center; */
-      text-align:center;
-      align-self: center;
-  }
-  .contact .heading{
-    font-size: 40px;
-  }
-  .contact .row .para{
-    font-size: 1em;
-  }
-  /* textarea{
-
-    margin-left: 10%;
-    margin-right: 20% !important;
-
-  } */
-  /* input{
-    margin-left: 10%;
-    margin-right: 20% !important;
-
-  } */
-  .styled-input label{
-    padding-left: 10%;
-  }
-  .container{
-    margin-right: 17%;
-    margin-left: 10%;
-  }
-}
-
-input[type=checkbox] + label {
-color: #ccc;
-font-style: italic;
-} 
-
-input[type=checkbox]:checked + label {
-color: #f00;
-font-style: normal;
-}
-
-.contact .para{
-  color: white;
-  font-size: 1.25em;
-}
-
-.footer-distributed {
-  background-color: #ecf7ea;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  box-sizing: border-box;
-  width: 100%;
-  text-align: left;
-  font: normal 16px sans-serif;
-  padding: 25px 50px;
-}
-
-.footer-distributed .footer-left p {
-  color: #098f2e;
-  font-size: 14px;
-  margin: 0;
-}
-/* Footer links */
-
-.footer-distributed p.footer-links {
-  font-size: 18px;
-  font-weight: 700;
-  color: #098f2e;
-  margin: 0 0 10px;
-  padding: 0;
-  transition: ease .25s;
-  
-}
-
-.footer-distributed p.footer-links a {
-  display: inline-block;
-  line-height: 1.8;
-  text-decoration: none;
-  color: inherit;
-  transition: ease .25s;
-}
-
-.footer-distributed .footer-links a:before {
-  content: "·";
-  font-size: 20px;
-  left: 0;
-  color: #fff;
-  display: inline-block;
-  padding-right: 5px;
-}
-
-.footer-distributed .footer-links .link-1:before {
-  content: none;
-}
-
-.footer-distributed .footer-right {
-  float: right;
-  margin-top: 6px;
-  max-width: 180px;
-}
-
-.footer-distributed .footer-right a {
-  display: inline-block;
-  text-decoration: none;
-  width: 35px;
-  height: 35px;
-  background-color: #098f2e;
-  border-radius: 5px;
-  font-size: 20px;
-  color: #ecf7ea;
-  text-align: center;
-  line-height: 35px;
-  margin-left: 3px;
-  transition:all .25s;
-}
-
-.footer-distributed .footer-right a:hover{transform:scale(1.1); -webkit-transform:scale(1.1);}
-
-.footer-distributed p.footer-links a:hover{text-decoration:none;}
-
-/* Media Queries */
-
-@media (max-width: 600px) {
-  .footer-distributed .footer-left, .footer-distributed .footer-right {
-    text-align: center;
-  }
-  .footer-distributed .footer-right {
-    float: none;
-    margin: 0 auto 20px;
-  }
-  .footer-distributed .footer-left p.footer-links {
-    line-height: 1.8;
-  }
-}
-
 
 .carousel {
   position: relative;
@@ -770,9 +411,21 @@ font-style: normal;
   color: #aaaaaa;
 }
 
-#carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet,
-#carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
-#carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
+#carousel-1:checked
+  ~ .control-1
+  ~ .carousel-indicators
+  li:nth-child(1)
+  .carousel-bullet,
+#carousel-2:checked
+  ~ .control-2
+  ~ .carousel-indicators
+  li:nth-child(2)
+  .carousel-bullet,
+#carousel-3:checked
+  ~ .control-3
+  ~ .carousel-indicators
+  li:nth-child(3)
+  .carousel-bullet {
   color: #428bca;
 }
 
@@ -784,18 +437,355 @@ font-style: normal;
   text-align: center;
   font-size: 27px;
   color: rgba(255, 255, 255, 1);
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   z-index: 9999;
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), -1px 0px 2px rgba(255, 255, 255, 0);
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33),
+    -1px 0px 2px rgba(255, 255, 255, 0);
 }
 
+/* --contact-- */
+.contact .heading {
+  text-align: center;
+  color: white;
+}
+.contact {
+  padding-bottom: 20px;
+}
 
+.input-container {
+  text-align: center;
+  width: 650px;
+  max-width: 100%;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
 
+input:focus ~ label,
+textarea:focus ~ label,
+input:valid ~ label,
+textarea:valid ~ label {
+  font-size: 0.55em;
+  color: #098f2e;
+  top: -5px;
+  -webkit-transition: all 0.225s ease;
+  transition: all 0.225s ease;
+}
 
+.styled-input {
+  float: left;
+  width: 293px;
+  max-width: 100%;
+  /* margin: 1rem 0; */
+  position: relative;
+  border-radius: 4px;
+}
 
+.styled-input label {
+  color: #098f2e;
+  padding: 0.5rem 30px 0.5rem 30px;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+  pointer-events: none;
+}
 
+.styled-input.wide {
+  width: 650px;
+  max-width: 100%;
+}
 
+input,
+textarea {
+  padding: 20px;
+  border: 0;
+  width: 100%;
+  font-size: 1rem;
+  background-color: white;
+  color: #098f2e;
+  border-radius: 4px;
+}
 
+input:focus,
+textarea:focus {
+  outline: 0;
+}
 
+input:focus ~ span,
+textarea:focus ~ span {
+  width: 100%;
+  -webkit-transition: all 0.075s ease;
+  transition: all 0.075s ease;
+}
 
+textarea {
+  width: 100%;
+  min-height: 15em;
+}
 
+.submit-btn {
+  /* float: right; */
+  /* align-self: center; */
+  padding: 7px 35px;
+  border-radius: 5px;
+  display: inline-block;
+  background-color: #c2eab4;
+  color: #098f2e;
+  text-transform: uppercase;
+  font-size: 13px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 2px 10px 0 rgba(0, 0, 0, 0.07);
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+  font-weight: 600;
+}
+
+.submit-btn:hover {
+  transform: translateY(1px);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.09);
+}
+
+input[type="checkbox"] + label {
+  color: #ccc;
+  font-style: italic;
+}
+
+input[type="checkbox"]:checked + label {
+  color: #f00;
+  font-style: normal;
+}
+
+.contact .para {
+  color: white;
+  font-size: 1.25em;
+}
+
+/* --footer-- */
+.footer-distributed {
+  background-color: #ecf7ea;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: normal 16px sans-serif;
+  padding: 25px 50px;
+}
+
+.footer-distributed .footer-left p {
+  color: #098f2e;
+  font-size: 14px;
+  margin: 0;
+}
+/* Footer links */
+
+.footer-distributed p.footer-links {
+  font-size: 18px;
+  font-weight: 500;
+  color: #098f2e;
+  margin: 0 0 10px;
+  padding: 0;
+  transition: ease 0.25s;
+}
+
+.footer-distributed p.footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+  transition: ease 0.25s;
+}
+
+.footer-distributed .footer-links a:before {
+  content: "·";
+  font-size: 20px;
+  left: 0;
+  color: #fff;
+  display: inline-block;
+  padding-right: 5px;
+}
+
+.footer-distributed .footer-links .link-1:before {
+  content: none;
+}
+
+.footer-distributed .footer-right {
+  float: right;
+  margin-top: 6px;
+  max-width: 180px;
+}
+
+.footer-distributed .footer-right a {
+  display: inline-block;
+  text-decoration: none;
+  width: 35px;
+  height: 35px;
+  background-color: #098f2e;
+  border-radius: 5px;
+  font-size: 20px;
+  color: #ecf7ea;
+  text-align: center;
+  line-height: 35px;
+  margin-left: 3px;
+  transition: all 0.25s;
+}
+
+.footer-distributed .footer-right a:hover {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+}
+
+.footer-distributed p.footer-links a:hover {
+  text-decoration: none;
+}
+
+/* Media Queries */
+@media (max-width: 944px) {
+  nav img {
+    left: 6%;
+    top: 20px;
+    width: 130px;
+  }
+  nav ul li a {
+    font-size: 17px;
+  }
+  .video {
+    display: inline-block;
+  }
+
+  .video video {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-width: 860px) {
+  label #btn {
+    display: block;
+    /* float: right !important; */
+  }
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #098f2e;
+    top: 80px;
+    left: -100%;
+    transition: all 0.5s;
+    text-align: center;
+  }
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  nav ul li a {
+    font-size: 20px;
+    color: #ecf7ea;
+  }
+  nav ul li a::before {
+    background: #ecf7ea;
+  }
+  #check:checked ~ ul {
+    left: 0%;
+  }
+  #check:checked ~ label #btn {
+    display: none;
+  }
+  #check:checked ~ label #cancel {
+    display: block;
+  }
+
+  .home,
+  .vision {
+    display: inline;
+    font-size: 17px;
+  }
+
+  .heading {
+    font-size: 45px;
+  }
+
+  .text img {
+    margin-top: 20%;
+    width: 50%;
+
+    height: auto;
+    margin-left: -10px;
+  }
+  .text {
+    text-align: center;
+  }
+
+  .bg_image1 img,
+  .bg_image2 img {
+    width: 100%;
+    height: auto;
+  }
+  .video {
+    display: inline-flex;
+  }
+
+  .video video {
+    width: 100%;
+    height: auto;
+  }
+
+  /* .bg {
+    background-size: 100% 85%;
+  } */
+}
+/* contact */
+@media (max-width: 768px) {
+  .submit-btn {
+    width: auto;
+    text-align: center;
+    align-self: center;
+  }
+  .contact .heading {
+    font-size: 40px;
+  }
+  .contact .row .para {
+    font-size: 1em;
+  }
+
+  .input-container {
+    width: 60%;
+  }
+  .styled-input,
+  textarea {
+    width: 90%;
+    float: none !important;
+  }
+
+  .styled-input label {
+    padding-left: 10%;
+  }
+}
+
+/* services */
+@media (max-width: 761 px) {
+  .services .container {
+    margin: auto !important;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+/* footer */
+@media (max-width: 600px) {
+  .footer-distributed .footer-left,
+  .footer-distributed .footer-right {
+    text-align: center;
+  }
+  .footer-distributed .footer-right {
+    float: none;
+    margin: 0 auto 20px;
+  }
+  .footer-distributed .footer-left p.footer-links {
+    line-height: 1.8;
+  }
+}
