--- a/style.css
+++ b/style.css
@@ -444,7 +444,7 @@ video {
 }
 
 /* --contact-- */
-.contact .heading {
+/* .contact .heading {
   text-align: center;
   color: white;
 }
@@ -458,6 +458,7 @@ video {
   max-width: 100%;
   margin-left: auto !important;
   margin-right: auto !important;
+  display: grid;
 }
 
 input:focus ~ label,
@@ -475,7 +476,7 @@ textarea:valid ~ label {
   float: left;
   width: 293px;
   max-width: 100%;
-  /* margin: 1rem 0; */
+  margin: 1rem 0; 
   position: relative;
   border-radius: 4px;
 }
@@ -494,6 +495,7 @@ textarea:valid ~ label {
 .styled-input.wide {
   width: 650px;
   max-width: 100%;
+  resize: vertical;
 }
 
 input,
@@ -525,8 +527,8 @@ textarea {
 }
 
 .submit-btn {
-  /* float: right; */
-  /* align-self: center; */
+  float: right; 
+  align-self: center; 
   padding: 7px 35px;
   border-radius: 5px;
   display: inline-block;
@@ -559,6 +561,297 @@ input[type="checkbox"]:checked + label {
 .contact .para {
   color: white;
   font-size: 1.25em;
+} */
+
+/* h1 {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 64px;
+  color: white;
+  text-align: center;
+}
+
+h4 {
+  text-align: center;
+  font-weight: 400;
+  font-size: 20px;
+  color: white;
+  line-height: 1.5;
+} */
+
+/* ///// inputs /////*/
+/* .input-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  margin: 2% auto 4% auto;
+  justify-content: center;
+  align-items: center;
+}
+.row1 {
+  width: 48%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+input:focus ~ label,
+textarea:focus ~ label,
+input:valid ~ label,
+textarea:valid ~ label {
+  font-size: 0.75em;
+  color: #098f2e;
+  top: -5px;
+  -webkit-transition: all 0.225s ease;
+  transition: all 0.225s ease;
+}
+
+.styled-input {
+  float: left;
+  width: 293px;
+  margin: 1rem auto;
+  position: relative;
+  border-radius: 4px;
+}
+
+@media only screen and (max-width: 768px) {
+  .styled-input {
+    width: 100%;
+  }
+}
+
+.styled-input label {
+  color: #098f2e;
+  padding: 1.3rem 30px 1rem 30px;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+  pointer-events: none;
+}
+
+.styled-input.wide {
+  width: 650px;
+  max-width: 100%;
+}
+
+input,
+textarea {
+  padding: 30px;
+  border: 0;
+  width: 100%;
+  font-size: 1rem;
+  background-color: white;
+  color: #098f2e;
+  border-radius: 4px;
+}
+
+input:focus,
+textarea:focus {
+  outline: 0;
+}
+
+input:focus ~ span,
+textarea:focus ~ span {
+  width: 100%;
+  -webkit-transition: all 0.075s ease;
+  transition: all 0.075s ease;
+}
+
+textarea {
+  width: 100%;
+  min-height: 15em;
+}
+
+.submit-btn {
+  padding: 7px 35px;
+  border-radius: 10px;
+  display: inline-block;
+  background-color: #ecf7ea;
+  color: #098f2e;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 2px 10px 0 rgba(0, 0, 0, 0.07);
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+  font-weight: 500;
+}
+
+.submit-btn:hover {
+  transform: translateY(1px);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.09);
+}
+
+@media (max-width: 768px) {
+  .submit-btn {
+    width: 100%;
+    float: none;
+    text-align: center;
+  }
+}
+
+input[type="checkbox"] + label {
+  color: #ccc;
+  font-style: italic;
+}
+
+input[type="checkbox"]:checked + label {
+  color: #f00;
+  font-style: normal;
+} */
+
+.contact-form {
+  position: relative;
+  width: 50%;
+  top: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5%;
+  text-align: center;
+}
+
+form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 4em;
+}
+
+form div {
+  width: 100%;
+}
+
+.small,
+.small-right {
+  width: 46% !important;
+}
+
+.small-right {
+  float: right;
+}
+
+.contact-form h1 {
+  text-align: center;
+  font-size: 64px;
+  color: white;
+  text-transform: uppercase;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: -2%;
+}
+
+.contact-form h4 {
+  font-weight: 400;
+  font-size: 20px;
+  color: white;
+  margin-bottom: 5%;
+}
+
+.txtb {
+  position: relative;
+}
+
+.txtb label {
+  color: #098f2e;
+  position: absolute;
+  top: 0.7em;
+  left: 0.5em;
+  padding-top: 0.5%;
+  font-size: 19px;
+  z-index: 1;
+  -webkit-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
+  pointer-events: none;
+}
+
+.txtb input,
+.txtb textarea {
+  width: 100%;
+  height: 100%;
+  border: none;
+  background: white;
+  padding: 0.4em;
+  font-size: 17px;
+  margin-top: 2em;
+  border-radius: 10px;
+  z-index: 2;
+}
+
+.txtb input {
+  margin-top: 0.2em;
+  padding-top: 0.65em;
+  padding-left: 0.65em;
+}
+
+.txtb textarea {
+  resize: vertical;
+  padding-top: 1.4em;
+  padding-left: 0.6em;
+}
+
+.wide label {
+  margin-top: 2.3em;
+}
+
+.wide {
+  margin-bottom: 1em;
+}
+
+.txtb input:focus,
+.txtb textarea:focus {
+  outline: 0;
+}
+
+.txtb input:focus + label,
+.txtb input:valid + label {
+  margin-top: 0.8em;
+  top: -0.1em;
+  left: 0.8em;
+  font-size: 0.8em;
+}
+
+.txtb textarea:focus + label,
+.txtb textarea:valid + label {
+  margin-top: 3em;
+  top: -0.1em;
+  left: 0.7em;
+  font-size: 0.8em;
+}
+
+.btn {
+  display: block;
+  background: #ecf7ea;
+  padding: 14px 0;
+  border-radius: 5px;
+  color: #098f2e;
+  cursor: pointer;
+  max-width: 30%;
+  margin-top: 11px;
+  font-weight: 600;
+}
+
+.btn:hover {
+  transform: translateY(1px);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.09);
+}
+
+@media (max-width: 1000px) {
+  .small,
+  .small-right {
+    width: 100% !important;
+  }
+
+  .small-right {
+    float: left;
+    margin-top: 2em;
+  }
+
+  /* .wide {
+    margin-top: -0.6em;
+  } */
 }
 
 /* --footer-- */
@@ -736,7 +1029,7 @@ input[type="checkbox"]:checked + label {
   } */
 }
 /* contact */
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .submit-btn {
     width: auto;
     text-align: center;
@@ -761,7 +1054,7 @@ input[type="checkbox"]:checked + label {
   .styled-input label {
     padding-left: 10%;
   }
-}
+} */
 
 /* services */
 @media (max-width: 761 px) {
