--- a/style.css
+++ b/style.css
@@ -106,9 +106,6 @@ label #cancel {
   margin-left: -15px;
 }
 
-.bg_image1 img {
-  /* float: right; */
-}
 
 /*--video--*/
 .video {
@@ -257,14 +254,14 @@ video {
 .product .heading {
   margin-top: 3%;
   text-align: center;
-  font-size: 64px;
+  font-size: 3.5rem;
   text-transform: uppercase;
   color: white;
 }
 
 .carousel-item {
   background-color: rgba(49, 71, 46, 0.58);
-  height: 70vh;
+  height: 80vh;
   border-radius: 20px;
   text-align: center;
 }
@@ -273,12 +270,13 @@ video {
   margin-left: 15%;
   border-radius: 20px;
   margin-right: 15%;
+  margin-bottom: 30px;
 }
 
 .heading2 {
   /* margin-top: 3%; */
   padding-top: 3%;
-  font-size: 7vh !important;
+  font-size: 5vh !important;
 }
 
 .column {
@@ -295,12 +293,7 @@ video {
   display: table;
   clear: both;
 }
-.column img {
-  height: 33vh !important;
-  padding-right: 10%;
-  padding-left: 10%;
-  padding-top: 8%;
-}
+
 
 .more button {
   padding: 13px;
@@ -346,7 +339,7 @@ video {
 .carousel-control {
   background: rgba(0, 0, 0, 0.28);
   border-radius: 50%;
-  margin-top: 20%;
+  /* margin-top: 0%; */
   color: #fff;
   cursor: pointer;
   display: none;
@@ -354,14 +347,14 @@ video {
   height: 40px;
   line-height: 35px;
   position: absolute;
-  /* top: 50%; */
+  top: 50%;
   -webkit-transform: translate(0, -50%);
   cursor: pointer;
   -ms-transform: translate(0, -50%);
   transform: translate(0, -50%);
   text-align: center;
   width: 40px;
-  /* z-index: 10; */
+  z-index: 10;
 }
 
 .carousel-control.prev {
@@ -379,7 +372,10 @@ video {
 
 #carousel-1:checked ~ .control-1,
 #carousel-2:checked ~ .control-2,
-#carousel-3:checked ~ .control-3 {
+#carousel-3:checked ~ .control-3,
+#carousel-4:checked ~ .control-4,
+#carousel-5:checked ~ .control-5,
+#carousel-6:checked ~ .control-6 {
   display: block;
 }
 
@@ -425,8 +421,23 @@ video {
   ~ .control-3
   ~ .carousel-indicators
   li:nth-child(3)
+  .carousel-bullet,
+  #carousel-4:checked
+  ~ .control-4
+  ~ .carousel-indicators
+  li:nth-child(4)
+  .carousel-bullet,
+  #carousel-5:checked
+  ~ .control-5
+  ~ .carousel-indicators
+  li:nth-child(5)
+  .carousel-bullet,
+  #carousel-6:checked
+  ~ .control-6
+  ~ .carousel-indicators
+  li:nth-child(6)
   .carousel-bullet {
-  color: #428bca;
+  color: #098f2e;
 }
 
 #title {
@@ -437,7 +448,7 @@ video {
   text-align: center;
   font-size: 27px;
   color: rgba(255, 255, 255, 1);
-  font-family: "Open Sans", sans-serif;
+  /* font-family: "Open Sans", sans-serif; */
   z-index: 9999;
   text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33),
     -1px 0px 2px rgba(255, 255, 255, 0);
@@ -769,33 +780,7 @@ form div {
     background-size: 100% 85%;
   } */
 }
-/* contact */
-/* @media (max-width: 768px) {
-  .submit-btn {
-    width: auto;
-    text-align: center;
-    align-self: center;
-  }
-  .contact .heading {
-    font-size: 40px;
-  }
-  .contact .row .para {
-    font-size: 1em;
-  }
 
-  .input-container {
-    width: 60%;
-  }
-  .styled-input,
-  textarea {
-    width: 90%;
-    float: none !important;
-  }
-
-  .styled-input label {
-    padding-left: 10%;
-  }
-} */
 
 /* services */
 @media (max-width: 761 px) {
@@ -826,7 +811,7 @@ form div {
 
 
 
-@media (max-width: 768px){
+@media (max-width: 1100px){
 
   .column {
     float: none;
@@ -844,23 +829,74 @@ form div {
     display: block;
     /* clear: both; */
   }
-  .column img{
+  .agriculture-img{
   height: 33vh !important;
   padding-right: 10% ;
   padding-left: 10%;
   padding-top: 8%;
-  width: 80%;
+  width: 75%;
+  /* float: none; */
+  padding-bottom: 16%;
   }
+  .airfarms-img{
+  height: 31vh !important;
+  padding-right: 13%  !important;
+  padding-left: 10%;
+  padding-top: 10%;
+  padding-bottom: 20%;
+  width: 70%;
+  /* float: n; */
+  }
+  .automatic-img{
+    height: 30vh !important;
+    float: right;
+    padding-right: 15% !important;
+    padding-left: 10%;
+    padding-top: 8%;
+    padding-bottom: 30% !important;
+  width: 70%;
+
+    
+  }
+  .Dart-img{
+    height: 55vh !important;
+    float: right;
+    padding-right: 30% !important;
+    padding-left: 10%;
+    padding-top: 8%;
+    padding-bottom: 15% !important;
+  width: 35%;
+}
+.Actuators-img{
+  height: 55vh !important;
+  float: right;
+  padding-right: 15% !important;
+  padding-left: 10%;
+  padding-top: 8%;
+  padding-bottom: 25% !important;
+  width: 65%;
+}
+
+.growbags-img{
+  height: 55vh !important;
+  float: right;
+  padding-right: 5% !important;
+  padding-left: 10%;
+  padding-top: 8%;
+  padding-bottom: 15% !important;
+  width: 85%;
+
+}
   .carousel-inner{
     /* width: 70%; */
-    height: 500px;
+    height: 120vh;
   }
   .carousel{
     width: 70%;
-    height: 500px;
+    height: 120vh;
   }
   .carousel-item{
-    height: 500px;
+    height: 120vh;
   }
   .carousel-item .heading2{
     font-size: 1.5em !important;
@@ -871,6 +907,63 @@ form div {
 }
 
 @media (max-width: 768px){}
+
+
+.agriculture-img {
+  height: 33vh !important;
+  float: right;
+  padding-right: 10%;
+  padding-left: 10%;
+  padding-top: 8%;
+}
+
+.airfarms-img{
+  height: 40vh !important;
+  float: right;
+  padding-right: 25%;
+  padding-left: 10%;
+  padding-top: 8%;
+}
+
+.automatic-img{
+  height: 30vh !important;
+  float: right;
+  padding-right: 17%;
+  padding-left: 10%;
+  padding-top: 8%;
+  padding-bottom: 10%;
+  border-radius: 10px;
+}
+.Dart-img{
+  height: 43vh !important;
+  float: right;
+  padding-right: 35%;
+  padding-left: 10%;
+  padding-top: 8%;
+}
+
+
+.Actuators-img{
+  height: 30vh !important;
+  float: right;
+  padding-right: 15%;
+  padding-left: 12%;
+  padding-top: 8%;
+  padding-bottom: 10%;
+}
+.growbags-img{
+  height: 47vh !important;
+  float: right;
+  padding-right: 15%;
+  padding-left: 12%;
+  padding-top: 0%;
+  /* padding-bottom: 10%; */
+}
+
+.contact-form .heading{
+  color: #ecf7ea;
+  
+}
 
 
 
