--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-html{
+html {
   scroll-behavior: smooth;
 }
 * {
@@ -106,11 +106,9 @@ label #cancel {
   margin-top: 15%;
   margin-left: 5%;
   width: 50%;
-
 }
 
-.bg_image1 img{
-
+.bg_image1 img {
   float: right;
   width: 70%;
   height: auto;
@@ -122,7 +120,6 @@ label #cancel {
   margin-left: -15px;
 }
 
-
 /*--video--*/
 #video {
   background-image: url("./img/video_bg.png");
@@ -130,7 +127,6 @@ label #cancel {
   background-size: cover;
   width: 100%;
   text-align: center;
-  
 
   /* display: flex; */
 
@@ -138,13 +134,13 @@ label #cancel {
 }
 
 video {
-  width:80% !important;
+  width: 80% !important;
   max-width: 100vh;
   height: auto !important;
   margin: 5% auto 5% auto;
   max-height: 80vh;
 
- /* margin: auto; */
+  /* margin: auto; */
   object-fit: cover;
   border-radius: 10px;
   filter: opacity(75%);
@@ -181,14 +177,12 @@ video {
 
 /* services */
 .services {
-  margin-top: 3%;
+  margin-top: 10%;
   text-align: center;
 }
 .itemgrid {
   width: 90%;
   margin: 3% auto 3% auto;
-  /* margin-top: 40px;
-  margin-bottom: 20px; */
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   justify-content: space-between;
@@ -229,6 +223,7 @@ video {
 
 /* team */
 .team {
+  margin-top: 10%;
   text-align: center;
 }
 
@@ -259,17 +254,11 @@ video {
 #product {
   background: url(img/products.png);
   background-size: cover;
-  /* background-position: right; */
   display: flex;
-  /* justify-content: space-between; */
-  /* align-items: center; */
   min-height: 100vh;
 }
 .product {
   width: 100%;
-  /* height: 30vh; */
-  /* display: flex; */
-
   justify-content: center;
   align-items: center;
   color: white !important;
@@ -278,7 +267,7 @@ video {
 .product .heading {
   margin-top: 3%;
   text-align: center;
-  font-size: 3.5rem;
+  font-size: 64px;
   text-transform: uppercase;
   color: white;
 }
@@ -298,6 +287,7 @@ video {
 }
 
 .heading2 {
+  font-weight: 600;
   /* margin-top: 3%; */
   padding-top: 3%;
   font-size: 5vh !important;
@@ -308,6 +298,7 @@ video {
   width: 50%;
 }
 .column p {
+  font-weight: normal;
   padding: 10% 5% 5% 25%;
   text-align: left;
 }
@@ -318,7 +309,6 @@ video {
   clear: both;
 }
 
-
 .more button {
   padding: 13px;
   border: none;
@@ -328,6 +318,12 @@ video {
   border-radius: 5px;
   background-color: #c2eab4;
   color: #295a48;
+}
+
+.more button:hover {
+  cursor: pointer;
+  transform: translateY(2px);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.09);
 }
 
 .carousel {
@@ -446,17 +442,17 @@ video {
   ~ .carousel-indicators
   li:nth-child(3)
   .carousel-bullet,
-  #carousel-4:checked
+#carousel-4:checked
   ~ .control-4
   ~ .carousel-indicators
   li:nth-child(4)
   .carousel-bullet,
-  #carousel-5:checked
+#carousel-5:checked
   ~ .control-5
   ~ .carousel-indicators
   li:nth-child(5)
   .carousel-bullet,
-  #carousel-6:checked
+#carousel-6:checked
   ~ .control-6
   ~ .carousel-indicators
   li:nth-child(6)
@@ -483,6 +479,7 @@ video {
   position: relative;
   width: 50%;
   top: 50%;
+  margin-top: 10%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0%;
@@ -758,9 +755,11 @@ form div {
   nav ul li a:hover {
     color: #ecf7ea;
   }
+
   nav ul li a::before {
     background: #ecf7ea;
   }
+
   #check:checked ~ ul {
     left: 0%;
   }
@@ -771,24 +770,25 @@ form div {
     display: block;
   }
 
-
   .vision {
     display: inline;
-    /* align-items: center; */
     text-align: center;
-    /* align-items: center; */
-    /* justify-content: center; */
     font-size: 17px;
-    padding-left: 10% !important;
-    padding-right: 10% !important;
-
+    /* margin-top: 15% !important;
+    margin-bottom: 15% !important; */
   }
-  .vision p{
-    margin-left: auto;
-    margin-right: auto;
-
+  .vision p {
+    margin-left: 8%;
+    margin-right: 8%;
+    margin-bottom: 15%;
   }
-  .home{
+
+  .vision .heading {
+    margin-top: 15%;
+    margin-bottom: 1%;
+  }
+
+  .home {
     display: block;
     font-size: 17px;
     align-items: center;
@@ -796,7 +796,8 @@ form div {
     width: 100%;
   }
 
-  .heading {
+  .heading,
+  .product .heading {
     font-size: 45px;
   }
 
@@ -811,38 +812,26 @@ form div {
     text-align: center;
     width: 80%;
     padding: 3px;
-    margin-left: auto ;
+    margin-left: auto;
     margin-right: auto;
   }
 
-  
   .bg_image2 img {
     display: none;
   }
 
-  .bg_image1 img{
+  .bg_image1 img {
     margin-top: 10%;
     margin-bottom: 10%;
     /* margin-left:20%; */
     margin-right: 20%;
     /* width: auto; */
   }
-  /* #video {
-    height: 200px !important;
-    padding: 0px !important;
-  } */
 
-  /* .video video {
-    height: auto;
-  } */
-#home{
-  padding-bottom: 60%;
+  #home {
+    padding-bottom: 60%;
+  }
 }
-  /* .bg {
-    background-size: 100% 85%;
-  } */
-}
-
 
 /* services */
 @media (max-width: 761 px) {
@@ -871,105 +860,98 @@ form div {
   }
 }
 
-
-
-@media (max-width: 1100px){
-
+/* carousel images */
+@media (max-width: 1100px) {
   .column {
     float: none;
     width: 100%;
-    
   }
   .column p {
     padding: 3% 3% 3% 3%;
     /* width: 100%; */
     text-align: center;
   }
-  
+
   .row:after {
     /* content: ""; */
     display: block;
     /* clear: both; */
   }
-  .agriculture-img{
-  height: 33vh !important;
-  padding-right: 10% ;
-  padding-left: 10%;
-  padding-top: 8%;
-  width: 75%;
-  /* float: none; */
-  padding-bottom: 16%;
+  .agriculture-img {
+    height: 33vh !important;
+    padding-right: 10%;
+    padding-left: 10%;
+    padding-top: 8%;
+    width: 75%;
+    /* float: none; */
+    padding-bottom: 16%;
   }
-  .airfarms-img{
-  height: 31vh !important;
-  padding-right: 13%  !important;
-  padding-left: 10%;
-  padding-top: 10%;
-  padding-bottom: 20%;
-  width: 70%;
-  /* float: n; */
+  .airfarms-img {
+    height: 31vh !important;
+    padding-right: 13% !important;
+    padding-left: 10%;
+    padding-top: 10%;
+    padding-bottom: 20%;
+    width: 70%;
+    /* float: n; */
   }
-  .automatic-img{
+  .automatic-img {
     height: 30vh !important;
     float: right;
     padding-right: 15% !important;
     padding-left: 10%;
     padding-top: 8%;
     padding-bottom: 30% !important;
-  width: 70%;
-
-    
+    width: 70%;
   }
-  .Dart-img{
+  .Dart-img {
     height: 55vh !important;
     float: right;
     padding-right: 30% !important;
     padding-left: 10%;
     padding-top: 8%;
     padding-bottom: 15% !important;
-  width: 35%;
-}
-.Actuators-img{
-  height: 55vh !important;
-  float: right;
-  padding-right: 15% !important;
-  padding-left: 10%;
-  padding-top: 8%;
-  padding-bottom: 25% !important;
-  width: 65%;
-}
+    width: 35%;
+  }
+  .Actuators-img {
+    height: 55vh !important;
+    float: right;
+    padding-right: 15% !important;
+    padding-left: 10%;
+    padding-top: 8%;
+    padding-bottom: 25% !important;
+    width: 65%;
+  }
 
-.growbags-img{
-  height: 55vh !important;
-  float: right;
-  padding-right: 5% !important;
-  padding-left: 10%;
-  padding-top: 8%;
-  padding-bottom: 15% !important;
-  width: 85%;
-
-}
-  .carousel-inner{
+  .growbags-img {
+    height: 55vh !important;
+    float: right;
+    padding-right: 5% !important;
+    padding-left: 10%;
+    padding-top: 8%;
+    padding-bottom: 15% !important;
+    width: 85%;
+  }
+  .carousel-inner {
     /* width: 70%; */
     height: 120vh;
   }
-  .carousel{
+  .carousel {
     width: 70%;
     height: 120vh;
   }
-  .carousel-item{
+  .carousel-item {
     height: 120vh;
   }
-  .carousel-item .heading2{
+  .carousel-item .heading2 {
     font-size: 1.5em !important;
-    padding: 20px; ;
+    padding: 20px;
   }
-  
-
 }
 
-@media (max-width: 768px){}
-
+/* carousel images */
+@media (max-width: 768px) {
+}
 
 .agriculture-img {
   height: 33vh !important;
@@ -979,7 +961,7 @@ form div {
   padding-top: 8%;
 }
 
-.airfarms-img{
+.airfarms-img {
   height: 40vh !important;
   float: right;
   padding-right: 25%;
@@ -987,7 +969,7 @@ form div {
   padding-top: 8%;
 }
 
-.automatic-img{
+.automatic-img {
   height: 30vh !important;
   float: right;
   padding-right: 17%;
@@ -996,7 +978,7 @@ form div {
   padding-bottom: 10%;
   border-radius: 10px;
 }
-.Dart-img{
+.Dart-img {
   height: 43vh !important;
   float: right;
   padding-right: 35%;
@@ -1004,8 +986,7 @@ form div {
   padding-top: 8%;
 }
 
-
-.Actuators-img{
+.Actuators-img {
   height: 30vh !important;
   float: right;
   padding-right: 15%;
@@ -1013,7 +994,7 @@ form div {
   padding-top: 8%;
   padding-bottom: 10%;
 }
-.growbags-img{
+.growbags-img {
   height: 47vh !important;
   float: right;
   padding-right: 15%;
@@ -1022,13 +1003,32 @@ form div {
   /* padding-bottom: 10%; */
 }
 
-.contact-form .heading{
+.contact-form .heading {
   color: #ecf7ea;
-  
 }
 
+/*Floating Back-To-Top Button*/
+#myBtn {
+  position: fixed;
+  bottom: 20%;
+  float: right;
+  right: 4%;
+  left: 90%;
+  max-width: 60px;
+  height: 60px;
+  width: 100%;
+  font-size: 20px;
+  border-color: rgba(85, 85, 85, 0.2);
+  background-color: #098f2e;
+  opacity: 60%;
+  border-radius: 50px;
+}
 
+#myBtn a {
+  color: #ecf7ea;
+}
 
-
-
-
+#myBtn:hover {
+  opacity: 100;
+  cursor: pointer;
+}
